--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="42x42" href="/logo-1.png" />
+    <link rel="icon" type="image/png" sizes="42x42" href="./emot4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="" />
@@ -20,7 +20,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>EmotiCoin</title>
+    <title>EmotiCoin | First Ever Reverse</title>
   </head>
 
   <body>
